--- a/server/maker-complier/src/main/resources/application.properties
+++ b/server/maker-complier/src/main/resources/application.properties
@@ -1,7 +1,21 @@
 server.port=8080
-
+#-------------mysql---------------------#
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/corda_source?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.initialSize=10
+spring.datasource.minIdle=20
+spring.datasource.maxActive=30
+spring.datasource.maxWait=6000
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+#-------------------mysql end-----------------#
+#-------------source code directory---------------------#
 corda.source.path=D:\\tc_chen\\work_test\\source_marker\\src
 corda.build.lib.path=D:\\tc_chen\\work_test\\auto_source\\lib
 corda.build.jar.path=D:\\tc_chen\\work_test\\source_marker\\dist
+#-------------source code directory end---------------------#
 
 
